# STATS242

stats242-executable-textbook-v0.2/: README.md  pyproject.toml
stats242-executable-textbook-v0.2/configs/: book.yml
stats242-executable-textbook-v0.2/data/: README.md
stats242-executable-textbook-v0.2/scripts/: build_book.sh  run_ch02.sh  run_ch10.sh
stats242-executable-textbook-v0.3/: README.md  pyproject.toml
stats242-executable-textbook-v0.3/configs/: book.yml
stats242-executable-textbook-v0.3/data/: README.md
stats242-executable-textbook-v0.6/: README.md  pyproject.toml  requirements.txt
stats242-executable-textbook-v0.6/configs/: book.yml  (+2 more)
stats242-executable-textbook-v0.7/: pyproject.toml
stats242-executable-textbook-v0.7.1/: README.md
stats242-executable-textbook-v0.8.0/: README.md  pyproject.toml
stats242-executable-textbook-v0.8.0/configs/: book.yml  colmap_quotes.yml
stats242-executable-textbook-v0.8.0/data/: README.md
stats242-executable-textbook-v0.8.0/scripts/: validate_suite.sh
stats242-executable-textbook-v0.8.0/src/stats242xtb/: data_contracts.py  model_choices.py  run.py  tools_validate.py
stats242-executable-textbook-v0.8.0/src/stats242xtb/adapters/: base.py
stats242-executable-textbook-v0.8.0/src/stats242xtb/tools/: convert.py  validate.py
stats242-executable-textbook-v0.8.1/: README.md  pyproject.toml
stats242-executable-textbook-v0.8.1.1/: README.md  pyproject.toml
stats242-executable-textbook-v0.8.2/: ROADMAP.md  pyproject.toml  requirements.txt
stats242-executable-textbook-v0.8.3/: ROADMAP.md  pyproject.toml
(+78 files in other folders)
